--- a/index(buildings).html
+++ b/index(buildings).html
@@ -457,27 +457,30 @@ void main() {
       gl.drawElements(gl.TRIANGLES, shapeGeometry.indicelen, gl.UNSIGNED_SHORT, 0);
     }
 
+
     const building1 = createbuilding1Model();
-    const building2 = createbuilding2Model();
-    building2.translation = [1.25,0,0];
-    const road = createRoad();
-    road.rotation = [0, Math.PI/2, 0];
-    road.translation = [0,-0.975,1];
-    const road2 = createRoad();
-    road2.rotation = [0, Math.PI/2, 0];
-    road2.translation = [1.25,-0.975,1];
+    // moveBuilding(building1, 0,0,0);
+    // const building2 = createbuilding2Model();
+    // building2.translation = [1.25,0,0];
+    // const road = createRoad();
+    // road.rotation = [0, Math.PI/2, 0];
+    // road.translation = [0,-0.975,1];
+    // const road2 = createRoad();
+    // road2.rotation = [0, Math.PI/2, 0];
+    // road2.translation = [1.25,-0.975,1];
 
-    const building3 = createbuilding3Model();
+    // const building3 = createbuilding3Model();
     const building4 = createbuilding4Model();
-    building3.translation[0] = [-1.25];
-    const road3 = createRoad();
-    road3.rotation = [0, Math.PI/2, 0];
-    road3.translation = [-1.25,-0.975,1];
+    moveBuilding(building4,4, 0,0,3);
+    // building3.translation[0] = [-1.25];
+    // const road3 = createRoad();
+    // road3.rotation = [0, Math.PI/2, 0];
+    // road3.translation = [-1.25,-0.975,1];
 
-    building4.translation[0] = [3];
-    const road4 = createRoad();
-    road4.rotation = [0, Math.PI/2, 0];
-    road4.translation = [3,-0.975,1];
+    // building4.translation[0] = [3];
+    // const road4 = createRoad();
+    // road4.rotation = [0, Math.PI/2, 0];
+    // road4.translation = [3,-0.975,1];
     
 
     // building2.translation = [0,1,1];
@@ -525,13 +528,13 @@ void main() {
       gl.uniform3fv(uViewPosLoc, [0.0, 0.0, 0.0]);
       
       drawNode(gl, building1, modelTransformationMatrix);
-      drawNode(gl, road, modelTransformationMatrix);
-      drawNode(gl, building2, modelTransformationMatrix);
-      drawNode(gl, road2, modelTransformationMatrix);
-      drawNode(gl, building2, modelTransformationMatrix);
-      drawNode(gl, road3, modelTransformationMatrix);
-      drawNode(gl, building3, modelTransformationMatrix);
-      drawNode(gl, road4, modelTransformationMatrix);
+      // drawNode(gl, road, modelTransformationMatrix);
+      // drawNode(gl, building2, modelTransformationMatrix);
+      // drawNode(gl, road2, modelTransformationMatrix);
+      // drawNode(gl, building2, modelTransformationMatrix);
+      // drawNode(gl, road3, modelTransformationMatrix);
+      // drawNode(gl, building3, modelTransformationMatrix);
+      // drawNode(gl, road4, modelTransformationMatrix);
       drawNode(gl, building4, modelTransformationMatrix);
     }
 
