--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ noisy colors but the donut texture is nice in my opinion).-->
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@700&display=swap');
     body {
-      background: #5da37c;
+      background: #6494bc;
       color: #ccc;
       font-family: monospace;
       display: flex;
@@ -28,10 +28,10 @@ noisy colors but the donut texture is nice in my opinion).-->
      font-family: 'Silkscreen', monospace;
       font-size: 72px;
       font-weight: 700;
-      color: #44b4be;
+      color: #fda055;
       text-shadow: 
-        8px 8px 0px #103545,
-        10px 10px 0px rgba(79, 194, 229, 0.523);
+        8px 8px 0px  #ab5934,
+        10px 10px 0px  #fda055;
       margin: 10px 0;
       text-align: center;
       letter-spacing: 4px;
@@ -72,9 +72,12 @@ noisy colors but the donut texture is nice in my opinion).-->
     .text-center{
       font-family: 'Silkscreen', monospace;
       font-size: 14px;
-      border: 4px solid #000;
-      box-shadow: 4px 4px 0px #000;
+      background-color: #ab5934;
+      border: 4px solid #ab5934;
+      box-shadow: 4px 4px 0px #fda055;
       text-transform: uppercase;
+      border-radius: 10px;
+      color: #fff;
     }
     
     .btn {
@@ -1078,7 +1081,7 @@ void main() {
       gl.enable(gl.DEPTH_TEST);
       gl.enable(gl.BLEND);
       gl.blendFunc(gl.SRC_ALPHA, gl.ONE_MINUS_SRC_ALPHA);
-      gl.clearColor(0.55, 0.97, 0.73, 1);
+      gl.clearColor(0.51, 0.78, 0.90, 1);
       // gl.clearColor(0, 0, 0, 1);
       gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
 
