--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ noisy colors but the donut texture is nice in my opinion).-->
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@700&display=swap');
     body {
-      background: #6494bc;
+      background: #31a7b6;
       color: #ccc;
       font-family: monospace;
       display: flex;
@@ -1082,6 +1082,7 @@ void main() {
       gl.enable(gl.BLEND);
       gl.blendFunc(gl.SRC_ALPHA, gl.ONE_MINUS_SRC_ALPHA);
       gl.clearColor(0.51, 0.78, 0.90, 1);
+      gl.clearColor(0.35, 0.81, 1.0, 1);
       // gl.clearColor(0, 0, 0, 1);
       gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
 
