--- a/index.html
+++ b/index.html
@@ -999,16 +999,74 @@ void main() {
             }
           }
           else if (!grid[i][j].isSelected){
-            let road = createRoad();
-            if(j-1 < 0 || j + 1 >= gridSize ){
-              moveBuilding(road,1, tmp-i, tmp-j, 1);
+            let leftFree = false;
+            let rightFree = false;
+            let topFree = false;
+            let bottomFree = false;
+            let corner = false;
+            let cornerRot = 0;
+            let num_roads = 0;
+            if(i+1 < gridSize){
+              if(!grid[i+1][j].isSelected){
+                rightFree = true;
+                num_roads ++;
+              }
             }
-            else{
-              if(!grid[i][j-1].isSelected || !grid[i][j+1].isSelected){
-                moveBuilding(road,1, tmp-i, tmp-j, 0);
+            if(i-1 >= 0){
+              if(!grid[i-1][j].isSelected){
+                leftFree = true;
+                num_roads ++;
+              }
+            }
+            if(j+1 < gridSize){
+              if(!grid[i][j+1].isSelected){
+                topFree = true;
+                num_roads ++;
+              }
+            }
+            if(j-1 >= 0){
+              if(!grid[i][j-1].isSelected){
+                bottomFree = true;
+                num_roads ++;
+              }
+            }
+
+            let road = null;
+            if(num_roads == 4) road = createRoad3();
+            else if(num_roads == 3){
+              road = createRoad2();
+              if(!leftFree) moveBuilding(road, 1, tmp-i, tmp-j, 2);
+              else if(!topFree) moveBuilding(road, 1, tmp-i, tmp-j, 1);
+              else if(!rightFree) moveBuilding(road, 1, tmp-i, tmp-j, 0);
+              else if(!bottomFree) moveBuilding(road, 1, tmp-i, tmp-j, 3);
+            }
+            else if(num_roads == 2){
+              if((!rightFree && !leftFree) || (!topFree && !bottomFree)){
+                corner = false;
+                road = createRoad();
               }
               else{
+                road = createRoad4();
+                if(!rightFree && !topFree) cornerRot = 0;
+                else if(!topFree && !leftFree) cornerRot = 1;
+                else if(!bottomFree && !leftFree) cornerRot = 2;
+                else if(!bottomFree && !rightFree) cornerRot = 3;
+                corner = true;
+                moveBuilding(road, 1, tmp-i, tmp-j, cornerRot);
+              }
+            }
+            else road = createRoad();
+            if(num_roads != 3 && !corner){
+              if(j-1 < 0 || j + 1 >= gridSize){
                 moveBuilding(road,1, tmp-i, tmp-j, 1);
+              }
+              else{
+                if(!grid[i][j-1].isSelected || !grid[i][j+1].isSelected){
+                  moveBuilding(road,1, tmp-i, tmp-j, 0);
+                }
+                else{
+                  moveBuilding(road,1, tmp-i, tmp-j, 1);
+                }
               }
             }
             city.push(road);
@@ -1088,7 +1146,7 @@ void main() {
       ];
     }
 
-
+    let rotation_x=0;
     let inverseRotation = mat4Identity();
     function render() {
       
@@ -1349,6 +1407,9 @@ void main() {
         }
       }
 
+      rotation_x += 2;
+      tcube.localTransform = rotationMatrix([0,(Math.PI/180)*rotation_x,0]);
+      destBeam.localTransform = rotationMatrix([0,(Math.PI/180)*rotation_x,0]);
     }
 
     // Initialize when page loads
