added comments and polish

--- a/index(buildings).html
+++ b/index(buildings).html
@@ -1,14 +1,11 @@
-<!--All of the objects in the scene have a texture and a bumpmap.
-However the olny object in the scene where the bumpmap in not just a
-white image is the wall and the donut. The smoke is an animated texture on a plane geometry.
-I drew many of the texture myself including the donut texture (most are just 
-noisy colors but the donut texture is nice in my opinion).-->
+<!-- this file is meant to be a demo of the 4 different building types that were created
+ originally this file was used to design the buildings and see if they worked. -->
 <!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="utf-8">
-  <title>UNM CS 412/512 HW5</title>
+  <title>UNM CS 412/512 Final Building</title>
   <style>
     body {
       background: #111;
@@ -31,7 +28,7 @@ noisy colors but the donut texture is nice in my opinion).-->
 </head>
 
 <body>
-  <h2>Donut And Coffee</h2>
+  <h2>Buildings Demo</h2>
   <p>Edit vertex and fragment shaders on the left to get the result instantly.<br>
   Use mouse to drag and rotate the cube. <br>
   Use arrow keys and w, s keys to move the camera.<br>
