--- a/index(grid).html
+++ b/index(grid).html
@@ -1,14 +1,10 @@
-<!--All of the objects in the scene have a texture and a bumpmap.
-However the olny object in the scene where the bumpmap in not just a
-white image is the wall and the donut. The smoke is an animated texture on a plane geometry.
-I drew many of the texture myself including the donut texture (most are just 
-noisy colors but the donut texture is nice in my opinion).-->
+<!-- this file was used to design the grid code. It can be used as a demo to see the basic grid design. -->
 <!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="utf-8">
-  <title>UNM CS 412/512 HW5</title>
+  <title>UNM CS 412/512 Final Grid</title>
   <style>
     body {
       background: #111;
@@ -31,10 +27,12 @@ noisy colors but the donut texture is nice in my opinion).-->
 </head>
 
 <body>
-  <h2>Donut And Coffee</h2>
+  <h2>Grid DEMO</h2>
   <p>Edit vertex and fragment shaders on the left to get the result instantly.<br>
   Use mouse to drag and rotate the cube. <br>
   Use arrow keys and w, s keys to move the camera.<br>
+  Use the i/j/k/l keys to move the selected tile. <br>
+  use the space key to highlight a tiles and the m key to unhighlight a tile.
   </p>
 
   <div style="display: flex; gap: 10px; align-items: flex-start;">
